--- a/Pertemuan 1/Latihan 1.Rmd
+++ b/Pertemuan 1/Latihan 1.Rmd
@@ -4,5 +4,17 @@ output: html_document
 ---
 
 ```{r}
-print("Hello World!")
+library(forecast)
+library(TTR)
+library(TSA)
+library(aTSA)
+library(lmtest)
+library(MLmetrics)
+library(car)
+library(dplyr)
+library(MASS)
+library(tsibble)
+library(tseries)
+library(ggplot2)
+library(nortest)
 ```
