--- a/Pertemuan 2/Tugas Pertemuan 2.Rmd
+++ b/Pertemuan 2/Tugas Pertemuan 2.Rmd
@@ -1,6 +1,10 @@
 ---
 title: "Tugas Pertemuan 2"
-output: html_document
+output: 
+  html_document: 
+    theme: cosmo
+    toc: true
+    toc_float: true
 ---
 
 # Import Dependencies
